docs/api/qiskit/0.39/qiskit.algorithms.TimeEvolutionResult.mdx
---
title: TimeEvolutionResult (v0.39)
description: API reference for qiskit.algorithms.TimeEvolutionResult in qiskit v0.39
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.TimeEvolutionResult
---

# TimeEvolutionResult

<Class id="qiskit.algorithms.TimeEvolutionResult" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/algorithms/time_evolvers/time_evolution_result.py" signature="TimeEvolutionResult(evolved_state, aux_ops_evaluated=None)" modifiers="class">
  Bases: `qiskit.algorithms.algorithm_result.AlgorithmResult`

  Class for holding time evolution result.

  ### evolved\_state

  <Attribute id="qiskit.algorithms.TimeEvolutionResult.evolved_state">
    An evolved quantum state.

    **Type**

    [QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")
  </Attribute>

  ### aux\_ops\_evaluated

  <Attribute id="qiskit.algorithms.TimeEvolutionResult.aux_ops_evaluated">
    Optional list of observables for which expected values on an evolved state are calculated. These values are in fact tuples formatted as (mean, standard deviation).

    **Type**

    ListOrDict\[tuple\[complex, complex]] | None
  </Attribute>

  **Parameters**

  *   **evolved\_state** – An evolved quantum state.
  *   **aux\_ops\_evaluated** – Optional list of observables for which expected values on an evolved state are calculated. These values are in fact tuples formatted as (mean, standard deviation).

  ## Methods

  <span id="qiskit-algorithms-timeevolutionresult-combine" />

  ### combine

  <Function id="qiskit.algorithms.TimeEvolutionResult.combine" signature="TimeEvolutionResult.combine(result)">
    Any property from the argument that exists in the receiver is updated. :type result: `AlgorithmResult` :param result: Argument result with properties to be set.

    **Raises**

    **TypeError** – Argument is None

    **Return type**

    `None`
  </Function>
</Class>

