docs/api/qiskit/0.40/qiskit.algorithms.TimeEvolutionResult.mdx
---
title: TimeEvolutionResult (v0.40)
description: API reference for qiskit.algorithms.TimeEvolutionResult in qiskit v0.40
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.TimeEvolutionResult
---

# TimeEvolutionResult

<Class id="qiskit.algorithms.TimeEvolutionResult" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.23/qiskit/algorithms/time_evolvers/time_evolution_result.py" signature="TimeEvolutionResult(evolved_state, aux_ops_evaluated=None, observables=None, times=None)" modifiers="class">
  Bases: `qiskit.algorithms.algorithm_result.AlgorithmResult`

  Class for holding time evolution result.

  ### evolved\_state

  <Attribute id="qiskit.algorithms.TimeEvolutionResult.evolved_state">
    An evolved quantum state.

    **Type**

    [QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")|[Statevector](qiskit.quantum_info.Statevector "qiskit.quantum_info.Statevector")
  </Attribute>

  ### aux\_ops\_evaluated

  <Attribute id="qiskit.algorithms.TimeEvolutionResult.aux_ops_evaluated">
    Optional list of observables for which expected values on an evolved state are calculated. These values are in fact tuples formatted as (mean, standard deviation).

    **Type**

    ListOrDict\[tuple\[complex, complex]] | None
  </Attribute>

  ### observables

  <Attribute id="qiskit.algorithms.TimeEvolutionResult.observables">
    Optional list of observables for which expected on an evolved state are calculated at each timestep. These values are in fact lists of tuples formatted as (mean, standard deviation).

    **Type**

    ListOrDict\[tuple\[np.ndarray, np.ndarray]] | None
  </Attribute>

  ### times

  <Attribute id="qiskit.algorithms.TimeEvolutionResult.times">
    Optional list of times at which each observable has been evaluated.

    **Type**

    np.array | None
  </Attribute>

  **Parameters**

  *   **evolved\_state** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")  *|*[*Statevector*](qiskit.quantum_info.Statevector "qiskit.quantum_info.Statevector")) – An evolved quantum state.
  *   **aux\_ops\_evaluated** (*ListOrDict\[tuple\[complex, complex]] | None*) – Optional list of observables for which expected values on an evolved state are calculated. These values are in fact tuples formatted as (mean, standard deviation).
  *   **observables** (*ListOrDict\[tuple\[np.ndarray, np.ndarray]] | None*) – Optional list of observables for which expected values for each timestep. These values are in fact tuples formatted as (mean array, standard deviation array).
  *   **times** (*np.ndarray | None*) – Optional list of times at which each observable has been evaluated.

  ## Methods

  <span id="qiskit-algorithms-timeevolutionresult-combine" />

  ### combine

  <Function id="qiskit.algorithms.TimeEvolutionResult.combine" signature="TimeEvolutionResult.combine(result)">
    Any property from the argument that exists in the receiver is updated. :type result: `AlgorithmResult` :param result: Argument result with properties to be set.

    **Raises**

    **TypeError** – Argument is None

    **Return type**

    `None`
  </Function>
</Class>

